Fixed nav on tablet and mobile

--- a/skin/frontend/mango/default/scss/Pages/Shared/_header.scss
+++ b/skin/frontend/mango/default/scss/Pages/Shared/_header.scss
@@ -37,6 +37,15 @@ header
 	}
 }
 
+	.links > li:nth-child(1){
+		display: none;
+	}
+
+
+	.level0 > a span:hover{
+		border-bottom: 0;
+	}
+
 .messages li ul{
 	list-style: none;
 	margin: 0px;
@@ -279,5 +288,29 @@ margin:0px auto;
 		left:5px;
 	}
 }
+}
 
+@media-query(max-width:$desktop_max-width){
+
+
+	li.level0 a:hover{
+		cursor:pointer;
+	}
+
+	.search-wrapper{
+		float:none;
+		margin:0px auto;
+	}
+
+	header .searchMiniIcon span:hover{
+		cursor: pointer;
+	}
+
+	header nav ul li .has-children:hover{
+		border:0 !important;
+	}
+
+	.nav-element-opened:hover{
+	border-bottom:1px solid #B4B4B4
+}
 }
