--- a/skin/frontend/mango/default/scss/Pages/Shared/_nav.scss
+++ b/skin/frontend/mango/default/scss/Pages/Shared/_nav.scss
@@ -107,7 +107,7 @@ nav ul li ul
     position: fixed;
     width: 100%;
     background-color: white;
-    height:40px;
+    height:50px;
     padding-top:15px;
     max-width:100%;
 
@@ -141,9 +141,6 @@ nav ul li ul
 /* NAV FIXED END*/
 
 
-
-
-
 /* OFFCANVAS MENU */
 .offcanvas{
 		display: block;
@@ -159,10 +156,14 @@ nav ul li ul
 
 	ul{
 		background-color: white;
-		width:40%;
+		width:70%;
 		height:100%;
 		opacity: 1.0;
 		margin:0px;
+	}
+
+	@include breakpoint($tablet_min-width){
+		ul{width:40%;}
 	}
 
 	ul li ul{
