--- a/skin/frontend/mango/default/scss/_base.scss
+++ b/skin/frontend/mango/default/scss/_base.scss
@@ -1838,29 +1838,7 @@ img{
 
 /* RESPONSIVE DESIGN IPAD */
 
-@media(max-width:1024px){
-
-	li.level0 a:hover{
-		cursor:pointer;
-	}
-
-	.search-wrapper{
-		float:none;
-		margin:0px auto;
-	}
-
-	header .searchMiniIcon span:hover{
-		cursor: pointer;
-	}
-
-	header nav ul li .has-children:hover{
-		border:0 !important;
-	}
-
-	.nav-element-opened:hover{
-	border-bottom:1px solid #B4B4B4
-}
-
+@media(max-width:1049px){
 
 	.mobileOnly{
 		display: block;
@@ -1879,94 +1857,7 @@ img{
 	.col2-left-layout {
 		margin:0px 1%;
 	}
-/*
-	header nav{
-		display: none;
-		position: fixed;
-		left:0px;
-		top:0px;
-		width:100%;
-		background-color: rgba(0,0,0,0.5);
-		height:100%;
-		padding:0px;
-		z-index:999;
-	}
 
-	header nav ul{
-		background-color: white;
-		width:40%;
-		height:100%;
-		opacity: 1.0;
-		margin:0px;
-	}
-
-	header nav ul li ul{
-		position:relative;
-		width:93%;
-		text-align: left;
-	}
-	header nav ul li ul li{
-		margin-left:15px;
-	}
-	header nav ul li.mobileOnlyAddition a{
-		margin-left:25px;
-	}
-
-	.nav-element-opened{
-		display: block;
-		width:100%;
-		border-bottom:1px solid #B4B4B4;
-		padding:7px 0px 10px 0px;
-
-	}
-
-
-	header nav ul li ul li{
-		font-size: 0.75em;
-		width:100%;
-		font-weight: normal;
-	}
-
-
-	header nav ul li ul li:hover{
-		background-color:white;
-		border:0;
-	}
-
-	nav .navTitle, nav .navClose{
-		border:0;
-		display: inline-block;
-		width:40%;
-		font-size: 2.5em;
-		text-transform: uppercase;
-		font-weight: 300;
-	}
-
-	nav .navClose{
-		text-align: right;
-	}
-
-	nav .navClose span{
-		background-color: black;
-		color:white;
-		font-size: 0.5em;
-		padding:0px 7px;
-		border-radius: 50%;
-		vertical-align: middle;
-		}
-	nav .navClose span:hover{
-		cursor: pointer;
-		}
-
-	header nav ul li{
-		display:block;
-	}
-
-	nav ul li a{
-		font-weight: 400;
-		font-size: 0.75em;
-	}
-*/
 .mobile-opened-closed
 {
 	display: inline-block;
@@ -1982,21 +1873,7 @@ img{
 	header .searchMiniIcon span{
 	font-size: 2.25em;
 	}
-/*
-	header nav ul li ul li:not(:last-child){
-		border-bottom:1px solid #B4B4B4;
-	}
-	header nav ul li ul li:not(:last-child):hover{
-		border-bottom:1px solid #B4B4B4;
-	}
 
-	header nav ul li ul li:last-child{
-		border:0 !important;
-	}
-	header nav ul li ul li:last-child:hover{
-		border:0 !important;
-	}
-	*/
 	.top-account, .top-help-a{
 		display: none;
 	}
